--- a/puzzle1.ipynb
+++ b/puzzle1.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:4218f90fb0161477799fd0082102894d0eddd9e36dbd025e250f306adfbd3d6a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -11,7 +12,51 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This notebook contains my solution to [this puzzle](http://puzzles.bostonpython.com/puzzle1.html), written by John Bohannon for the Boston Python User Group.\n",
+      "This notebook contains my solution to [this puzzle](http://puzzles.bostonpython.com/hotdate.html), written by John Bohannon for the Boston Python User Group:\n",
+      "\n",
+      "Consider these base-10 digits: 123456789. If you insert spaces between them, you get various sequences of numbers:\n",
+      "\n",
+      "    1 2 3 4 5 6 7 8 9\n",
+      "    12 3 4 5 67 8 9\n",
+      "    1 2 34 5 6 7 89\n",
+      "    12 34 56 78 9\n",
+      "    1 23456 78 9\n",
+      "    12345 6789\n",
+      "    etc.\n",
+      "    \n",
+      "1) Write a program that generates all possible combinations of those digits.\n",
+      "\n",
+      "How many are there?\n",
+      "\n",
+      "Now let's insert a maximum of 8 addition or subtraction operators between the numbers, like this:\n",
+      "\n",
+      "    1+2+3+4+5+6+7-8+9\n",
+      "    12-3+4+5-67-8+9\n",
+      "    1+2+34+5-6-7-89\n",
+      "    12-34+56+78+9\n",
+      "    1+23456-78-9\n",
+      "    12345+6789\n",
+      "    etc.\n",
+      "    \n",
+      "Notice that those arithmetic expressions equate to different values:\n",
+      "\n",
+      "    1+2+3+4+5+6+7-8+9 = 29\n",
+      "    12-3+4+5-67-8+9 = -48\n",
+      "    1+2+34+5-6-7-89 = -60\n",
+      "    12-34+56+78+9 = 121\n",
+      "    1+23456-78-9 = 23370\n",
+      "    12345+6789 = 19134\n",
+      "    etc.\n",
+      "    \n",
+      "2) Write a program that generates all possible expressions in this way.\n",
+      "\n",
+      "How many sum to 100?\n",
+      "\n",
+      "3) Write a program that finds all such expressions for any sum.\n",
+      "\n",
+      "Which sum is the most popular, i.e. has the most expressions?\n",
+      "\n",
+      "4) Bonus: We can haz pretty data viz?\n",
       "\n",
       "This solution is copyright 2014 Allen B. Downey\n",
       "\n",
